Correccion de errores api v2
